force-app/main/default/objects/ProductRequest/fields/Equipment_Model_Product_Number__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Model_Product_Number__c</fullName>
    <label>Equipment Model # / Product #</label>
    <length>64</length>
    <type>Text</type>
</CustomField>