force-app/main/default/objects/ProductRequest/fields/Part_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Part_Manufacturer__c</fullName>
    <label>Part Manufacturer</label>
    <length>64</length>
    <type>Text</type>
</CustomField>