force-app/main/default/objects/ProductRequest/fields/Part_Model_Number__c.field-meta.xml
<CustomField>
    <fullName>Part_Model_Number__c</fullName>
    <label>Part Model #</label>
    <length>64</length>
    <type>Text</type>
</CustomField>