force-app/main/default/objects/ProductRequest/fields/Part_Order_Reason__c.field-meta.xml
<CustomField>
    <fullName>Part_Order_Reason__c</fullName>
    <label>Part Order Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Control is defective</fullName>
            </value>
            <value>
                <fullName>Control is leaking</fullName>
            </value>
            <value>
                <fullName>Not enough time to install part</fullName>
            </value>
            <value>
                <fullName>Not in my inventory</fullName>
            </value>
            <value>
                <fullName>Special order part</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>