force-app/main/default/objects/ProductRequest/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <label>Serial #</label>
    <length>64</length>
    <type>Text</type>
</CustomField>